--- a/style.css
+++ b/style.css
@@ -16,14 +16,10 @@ body{
 }
 
 h1{
-    font-family: 'Kablammo', cursive;
+    font-family: 'EB Garamond', serif;
+    text-transform: uppercase;
     text-align: center;
     font-size: 3rem;
-}
-
-h2{
-    font-family:Arial, Helvetica, sans-serif;
-    font-size: 0.75rem;
 }
 
 #map{
